welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: value foreach is not a member of Int
	for (i <- T.length-1) {
                          ^